--- a/.devops/pipelines/vmware-image.yml
+++ b/.devops/pipelines/vmware-image.yml
@@ -4,8 +4,15 @@
   values:
   - Windows 10
   - Windows 11
-  - Windows Server 2016
+  - Windows Server 2019
   - Windows Server 2022
+
+- name: host
+  displayName: Datacenter host
+  type: string
+  values:
+  - Infra
+  - Target
 
 trigger:
 - none
@@ -22,32 +29,32 @@ stages:
   jobs:
   - template: vmware/image.yml
     parameters:
-      name: 
+      iso: en-us_windows_11_business_editions_version_21h2_updated_aug_2022_x64_dvd_50c9cab3.iso
       path: packer/vmware/windows/desktop/11
       build: vsphere-iso.windows-desktop
-      variable_group: VMware
+      variable_group: VMware - ${{ parameters.host }}
     condition: eq('${{ parameters.windows }}', 'Windows 11')
   
   - template: vmware/image.yml
     parameters:
-      name: 
+      iso: 
       path: packer/vmware/windows/desktop/10
       build: vsphere-iso.windows-desktop
-      variable_group: VMware
+      variable_group: VMware - ${{ parameters.host }}
     condition: eq('${{ parameters.windows }}', 'Windows 10')
 
   - template: vmware/image.yml
     parameters:
-      name: 
-      path: packer/vmware/windows/server/2016
+      iso: 
+      path: packer/vmware/windows/server/2019
       build: vsphere-iso.windows-server-standard-dexp
-      variable_group: VMware
-    condition: eq('${{ parameters.windows }}', 'Windows Server 2016')
+      variable_group: VMware - ${{ parameters.host }}
+    condition: eq('${{ parameters.windows }}', 'Windows Server 2019')
 
   - template: vmware/image.yml
     parameters:
-      name: 
+      iso: 
       path: packer/vmware/windows/server/2022
       build: vsphere-iso.windows-server-standard-dexp
-      variable_group: VMware
+      variable_group: VMware - ${{ parameters.host }}
     condition: eq('${{ parameters.windows }}', 'Windows Server 2022')
