--- a/.devops/pipelines/vmware-image.yml
+++ b/.devops/pipelines/vmware-image.yml
@@ -1,3 +1,4 @@
+parameters:
 - name: windows
   displayName: Windows
   type: string
@@ -32,7 +33,7 @@ stages:
       iso: en-us_windows_11_business_editions_version_21h2_updated_aug_2022_x64_dvd_50c9cab3.iso
       path: packer/vmware/windows/desktop/11
       build: vsphere-iso.windows-desktop
-      variable_group: VMware - ${{ parameters.host }}
+      variable_group: "VMware - Target"
     condition: eq('${{ parameters.windows }}', 'Windows 11')
   
   - template: vmware/image.yml
@@ -40,7 +41,7 @@ stages:
       iso: 
       path: packer/vmware/windows/desktop/10
       build: vsphere-iso.windows-desktop
-      variable_group: VMware - ${{ parameters.host }}
+      variable_group: "VMware - Target"
     condition: eq('${{ parameters.windows }}', 'Windows 10')
 
   - template: vmware/image.yml
@@ -48,7 +49,7 @@ stages:
       iso: 
       path: packer/vmware/windows/server/2019
       build: vsphere-iso.windows-server-standard-dexp
-      variable_group: VMware - ${{ parameters.host }}
+      variable_group: "VMware - Target"
     condition: eq('${{ parameters.windows }}', 'Windows Server 2019')
 
   - template: vmware/image.yml
@@ -56,5 +57,5 @@ stages:
       iso: 
       path: packer/vmware/windows/server/2022
       build: vsphere-iso.windows-server-standard-dexp
-      variable_group: VMware - ${{ parameters.host }}
+      variable_group: "VMware - Target"
     condition: eq('${{ parameters.windows }}', 'Windows Server 2022')
