--- a/ansible/roles/citrix-delivery-controller/tasks/config.yml
+++ b/ansible/roles/citrix-delivery-controller/tasks/config.yml
@@ -1,33 +1,51 @@
 ---
 
-- name: Install Site Script
-  win_copy:
-    src: "{{ item }}"
-    dest: C:\Logs\
-  with_fileglob:
-  - "*.ps1"
 
-- name: Create or Join Site
-  win_shell: |
-    $env:SiteName = '{{ SiteName }}'
-    $env:DatabaseServer = '{{ environment_abbreviations }}-{{ DatabaseServer }}'
-    $env:DatabaseServerPort = '{{ DatabaseServerPort }}'
-    $env:DatabaseName_Site = '{{ DatabaseName_Site }}'
-    $env:DatabaseName_Logging = '{{ DatabaseName_Logging }}'
-    $env:DatabaseName_Monitoring = '{{ DatabaseName_Monitoring }}'
-    $env:LicenseServer = '{{ environment_abbreviations }}-{{ LicenseServerName }}'
-    $env:LicenseServerPort = '{{ LicenseServerPort }}'
-    $env:LicensingModel = '{{ LicensingModel }}'                  
-    $env:ProductCode = '{{ ProductCode }}'                                   
-    $env:ProductEdition = '{{ ProductEdition }}'
-    $env:AdminGroup = '{{ domain_name }}\{{ AdminGroup }}'
-    $env:Role =   '{{ Role }}'
-    $env:Scope = '{{ Scope }}'                                 
-    $env:GroomingDays = '{{ GroomingDays }}'
-    C:\Logs\createsite.ps1 -creates C:\Logs\sitedone.txt
-  register: result
-  become: yes
-  become_method: runas
-  become_user: GO\Administrator
-  vars:
-    ansible_become_password: "{{ ansible_password }}"
+- name: Obtain information from registry for site check
+  win_reg_stat:
+    path: HKLM:\Software\GO-EUC\
+    name: citrix_site_created
+  register: site_created
+
+- name: Site creation block
+  block:
+  - name: Install Site Script
+    win_copy:
+      src: "{{ item }}"
+      dest: C:\Logs\
+    with_fileglob:
+    - "*.ps1"
+
+  - name: Create or Join Site
+    win_shell: |
+      $env:SiteName = '{{ SiteName }}'
+      $env:DatabaseServer = '{{ groups['sql'][0] }}'
+      $env:DatabaseServerPort = '{{ DatabaseServerPort }}'
+      $env:DatabaseName_Site = '{{ DatabaseName_Site }}'
+      $env:DatabaseName_Logging = '{{ DatabaseName_Logging }}'
+      $env:DatabaseName_Monitoring = '{{ DatabaseName_Monitoring }}'
+      $env:LicenseServer = '{{ groups['ctx_lic'][0] }}'
+      $env:LicenseServerPort = '{{ LicenseServerPort }}'
+      $env:LicensingModel = '{{ LicensingModel }}'                  
+      $env:ProductCode = '{{ ProductCode }}'                                   
+      $env:ProductEdition = '{{ ProductEdition }}'
+      $env:AdminGroup = '{{ domain_name }}\{{ AdminGroup }}'
+      $env:Role =   '{{ Role }}'
+      $env:Scope = '{{ Scope }}'                                 
+      $env:GroomingDays = '{{ GroomingDays }}'
+      C:\Logs\createsite.ps1 -creates C:\Logs\sitedone.txt
+    register: result
+    become: True
+    become_method: runas
+    become_user: GO\Administrator
+    vars:
+      ansible_become_password: "{{ ansible_password }}"
+
+  - name: Add registry for future site creation check
+    win_regedit:
+      path: HKLM:\Software\GO-EUC
+      name: citrix_site_created
+      data: 1
+      type: dword
+  
+  when: site_created.exists == false 
