--- a/ansible/citrix-delivery-controller.yml
+++ b/ansible/citrix-delivery-controller.yml
@@ -5,6 +5,7 @@
   - domain-join
   - citrix-delivery-controller
   vars:
+    citrix_iso_source: Citrix_Virtual_Apps_and_Desktops_7_2203_2000.iso
     dns_domain_name: 'GO.EUC'
     domain_name: GO
     domain_controller: "{{ groups['dc'][0] }}"
