--- a/ansible/citrix-storefront.yml
+++ b/ansible/citrix-storefront.yml
@@ -5,6 +5,7 @@
   - domain-join
   - citrix-storefront
   vars:
+    citrix_iso_source: Citrix_Virtual_Apps_and_Desktops_7_2203_2000.iso
     dns_domain_name: 'GO.EUC'
     domain_name: GO
     environment_abbreviations: flow
