--- a/ansible/roles/citrix-storefront/tasks/init.yml
+++ b/ansible/roles/citrix-storefront/tasks/init.yml
@@ -1,28 +1,28 @@
 ---
-- name: Create SF Vars
+- name: Create Citrix Storefront variables
   script: createsfvars.ps1
   args:
     creates: C:\Logs\sf-vars.xml
   environment:
     HostbaseUrl: "{{ HostbaseUrl }}"
-    FarmServers: "{{ FarmServers }}"
+    FarmServers: "{{ groups['ctx_sf'] | join(', ') }}"
     StoreVirtualPath: "{{ StoreVirtualPath }}"
     TransportType: "{{ TransportType }}"
     GatewayUrl: "{{ GatewayUrl }}"
     GatewaySTAUrls: "{{ GatewaySTAUrls }}"
     GatewayName: "{{ GatewayName }}"
   
-- name: Copy a Storefront script file
+- name: Copy the Citrix Storefront script file
   win_copy:
     src: createsfsite.ps1
     dest: C:\Windows\Temp\
     
-- name: Storefront folder stat
+- name: Collect Citrix Storefront folder stat
   win_stat:
     path: C:\inetpub\wwwroot\Citrix
   register: sf_info
 
-- name: Start storefront script
+- name: Start Citrix Storefront script
   win_shell: C:\Windows\Temp\createsfsite.ps1
   when: sf_info.stat.exists == False
   vars:
