--- a/ansible/roles/citrix-storefront/tasks/main.yml
+++ b/ansible/roles/citrix-storefront/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 - name: Install Citrix Storefront
-  include: install.yml
+  include_tasks: install.yml
 
 - name: Init Citrix Storefront
-  include: init.yml
+  include_tasks: init.yml
 
 # - name: Join Citrix Storefront
 #   include: join.yml
