--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,5 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: YAML lint on Ansible
-        run: |
-          ls ./ansible/lint
-          yamllint -c ./ansible/lint/mylint.yml /ansible
+        run: yamllint -c ./ansible/lint/mylint.yml ./ansible
           
